Updating prototype to change the labels buttons, and add an additional info section.

--- a/views/count.handlebars
+++ b/views/count.handlebars
@@ -12,7 +12,7 @@
 		<h2>Count</h2>
 		{{#each this}}
 		<div class="click">
-			<h3> {{action}} {{name}} {{time}}
+			<h3> {{action}} {{name}} {{time}} {{comment}}</h3>
 		</div>
 		{{/each}}
 
