Changed the buttons

--- a/views/prototype.handlebars
+++ b/views/prototype.handlebars
@@ -22,11 +22,11 @@
 	<form id="feedback_form" method="post" action="/count">
 		<label>Name: </label><input type="text" id="name" name = "name" value="" class="text_input">
 		<br>
-		<label> Mildly Confused: </label> <button name="action" type="submit" value="rewind"><i class="fa fa-backward"></i></button>
-		<label> Moderately Confused: </label> <button name="action" type="submit" value="pause"><i class="fa fa-pause"></i></button>
-
-		<label> Extremely Confused: </label> <button name="action" type="submit" value="forward"><i class="fa fa-forward"></i></button>
-
+		<button name="action" type="submit" value="rewind">Mildly Confused</button>
+		<button name="action" type="submit" value="pause">Moderately Confused</button>
+		<button name="action" type="submit" value="forward">Extremely Confused</button>
+		<br>
+		<br>
 		<label>Additional Info: </label><input type="text" id="additionalInfo" name = "additionalInfo" value="" class="text_input">
 		<br>
 	</form>
