updated the text."

--- a/views/prototype.handlebars
+++ b/views/prototype.handlebars
@@ -9,7 +9,7 @@
 
 <body>
 	<div>
-		<h2>Give Shadi Feedback</h2>
+		<h2>Give Instructor Feedback</h2>
 		<p class="directions">This is a prototype that's trying to give your instructor real-time feedback about the class's understanding. If you get confused at any point in the lecture, click the button corresponding to your level of confusion.
 		</p>
 		<br>
