Writing student data to file, then use it to load info onto the instructor page.

--- a/views/instructor.handlebars
+++ b/views/instructor.handlebars
@@ -21,7 +21,7 @@
 	</div>
 	<div id="prompt-container">
 		<form class="prompt-form" method="post" action="/">
-			<input type="hidden" class="prompt-number-field" value="1">
+			<input type="hidden" class="prompt-number-field" name="promptNumber"value="1">
 			<label>Prompt: </label><textarea class="promptbox" name="prompt"></textarea>
 			<br>
 			<button name="action" type="submit" value="fire!">Fire!</button>
