fixed the prototype so that it writes feedback to a file, checks the file every 4 secs (there may be problems in the file with multiple people submitting at once), and after a minute displays the top click: green, yellow, or red.

--- a/views/instructor.handlebars
+++ b/views/instructor.handlebars
@@ -30,6 +30,7 @@
 	</div>
 	<button type="button" id="add-prompt">Add prompt</button>
 	<br>
+	<div id="traffic-light">{{light}}</div><br>
 	<h1> Student Data</h1><br>
 	<div id="student-data">
 
