--- a/views/instructor.handlebars
+++ b/views/instructor.handlebars
@@ -1,41 +1,106 @@
 <!doctype html>
 <html>
+
 <head>
-	<title>Class Feedback</title>
-	<meta charset="utf-8">
-	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
-	<script src="js/reloader.js"></script>
+    <title>Class Feedback</title>
+    <meta charset="utf-8">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <script src="js/reloader.js"></script>
+
+    <!-- CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.css" rel="stylesheet">
+    <link href="css/prompt.css" rel="stylesheet">
+
+
 </head>
 
 <body onload="reloadData()">
-	<div>
-		<h2>Write Feedback Prompts</h2>
-		<p class="directions">This is a prototype that's trying to give you an easy, fast, and informative method for gathering feedback from your students and dynamically teaching to meet your students' needs.
-		</p>
-		<br>
-		<p class="directions"> Inside the <b>Prompt Box</b>, write a prompt you'd like your students to respond. We suggest using specific prompts like: "What is the difference between using jquery and javascript to access the DOM? Why would you use one over the other?", instead of general prompts like: "Do you understand using jquery to navigate the DOM?".  Add as many prompts as you want to use in your lecture, and when ready for feedback click <b>fire</b>
-		</p>
-		<br>
-		<p> Students will then have <b>1 minute</b> to respond to your prompt and indicate their level of understanding. Writen feedback will begin displaying on your screen, but you can always look at it later.  After the minute is up, the traffic light will flash <b>green</b> if your students indicate a comfortable level of understanding, <b>yellow</b> if your students indicate moderate confusion, and <b>red</b> if your students indicate significant discomfort with the material.</p>
-	</div>
-	<div id="prompt-container">
-		<form class="prompt-form" method="post" action="/">
-			<input type="hidden" class="prompt-number-field" name="promptNumber"value="1">
-			<label>Prompt: </label><textarea class="promptbox" name="prompt"></textarea>
-			<br>
-			<button name="action" type="submit" value="fire!">Fire!</button>
-			<br>
-		</form>
-	</div>
-	<button type="button" id="add-prompt">Add prompt</button>
-	<br>
-	<div id="traffic-light">{{light}}</div><br>
-	<h1> Student Data</h1><br>
-	<div id="student-data">
 
-	</div>
-	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <div class="header1">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2 top navbar-static-top">
+                    <h1>feedback loop</h1>
+                    <br/>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <h2>Class Snapshot</h2>
+        <div class="row">
+
+            <div class="col-md-4">
+                <br/>
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <span class="badge">{{total}}</span> Total Responses
+                    </li>
+                    <li class="list-group-item list-group-item-danger">
+                        <span class=" danger badge">{{red}}</span> Understand Very Well
+                    </li>
+                    <li class="list-group-item list-group-item-warning">
+                        <span class=" danger badge">{{yellow}}</span> Understands Not Too Well
+                    </li>
+                    <li class="list-group-item list-group-item-success">
+                        <span class=" danger badge">{{green}}</span> Understands Very Little
+                    </li>
+                </ul>
+            </div>
+
+
+            <div class="col-md-8">
+                <div class="well detailed-output" id="student-data"></div>
+
+            </div>
+        </div>
+
+
+        <div>
+            <h2>Write Feedback Prompts</h2>
+            <p class="directions"> Inside the <b>Prompt Box</b>, write a prompt you'd like your students to answer. We suggest using specific prompts like: "What is the difference between using jquery and javascript to access the DOM? Why would you use one over the other?", instead of general prompts like: "Do you understand using jquery to navigate the DOM?". Add as many prompts as you want to use in your lecture, and when ready for feedback click <b>fire</b>.</p>
+            <br/>
+            <p> Students will then have <b>1 minute</b> to respond to your prompt and indicate their level of understanding. Writen feedback will begin displaying on your screen, but you can always look at it later. After the minute is up, the traffic light will flash <b>green</b> if your students indicate a comfortable level of understanding, <b>yellow</b> if your students indicate moderate confusion, and <b>red</b> if your students indicate significant discomfort with the material.</p>
+        </div>
+
+        <div id="prompt-container">
+
+            <div class="row" id="prompt-row">
+                <div class="col-md-3" id="first-prompt">
+
+                    <form class="prompt-form" method="post" action="/">
+                        <input type="hidden" class="prompt-number-field" name="promptNumber" value="1">
+
+                        <label>Prompt: </label>
+                        <textarea class="promptbox form-control" name="prompt"></textarea>
+                        <br/>
+                        <button class="btn btn-lg" name="action" type="submit" value="fire!">Fire!</button><br/>
+
+                    </form>
+                </div>
+
+            </div>
+
+        </div>
+
+
+
+
+        <button class="btn btn-lg" type="button" id="add-prompt">Add prompt</button>
+
+        <!-- can each new prompt go into a new collumn in a row  -->
+
+        <br>
+        <div id="traffic-light">{{light}}</div>
+
+    </div>
+
+
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="js/prompt.js"></script>
 </body>
+
 </html>
