--- a/views/prototype.handlebars
+++ b/views/prototype.handlebars
@@ -8,8 +8,8 @@
     <link href="css/style.css" rel="stylesheet">
 
     <!-- CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap-theme.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
     <link href="css/prompt.css" rel="stylesheet">
 
 
