--- a/views/instructor.handlebars
+++ b/views/instructor.handlebars
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2 top navbar-static-top">
-                    <h1>feedback loop</h1>
+                    <img src="/img/logo-white.png" width="200px">
                     <br/>
                 </div>
             </div>
